feat(schedule): 建立跨终端权威日程同步
- 新增服务端数据库权威到期调度、next_trigger_at、revision、墓碑和动作游标\n- 为音箱提供严格增量快照、动作流和单调ACK接口\n- 使用账号首锁、多实例期次CAS与精确occurrence校验保证幂等和租户隔离\n- 将闹铃、提醒和简报统一派生为多播主动事件并支持全局停止、稍后提醒、完成和删除\n- Python代理实现stop-and-wait重发、断线补报及UUID优先动作同步\n- 统一共享日程标签为80个Unicode字符并拒绝超限存量\n- 补充迁移、并发、状态语义、发送失败、软删除和跨租户回归测试\n- 同步主动助理与日程集成协议文档